--- a/style.css
+++ b/style.css
@@ -27,9 +27,12 @@ html {
 }
 
 body{
-    height: 100%;
+/*    height: 100%;  je sait pas c laquelle de elle ou celle du dessous qu'il faut utiliser zobite */
+    height: 100vh;
     max-height: 100%;
-    z-index: 1  ;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .loginHeader {
@@ -126,12 +129,6 @@ input:focus-visible {
     cursor: pointer;
     border-radius: 5px;
     transition: 0.3s;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
 }
 
 header {
